tests/idris2/reflection/reflection022/expected
1/1: Building BadElabScript (BadElabScript.idr)
Error: While processing right hand side of y. Bad elaborator script ?someHole [no locals in scope] (script is not a data value).

BadElabScript:14:5--14:15
 10 |   ?someHole
 11 |   check `(%search)
 12 | 
 13 | y : Nat
 14 | y = %runElab x
          ^^^^^^^^^^

Stuck place in the script:

BadElabScript:10:3--10:12
 06 | 
 07 | x : Elab Nat
 08 | x = do
 09 |   ignore $ check {expected=Type} `(Nat)
 10 |   ?someHole
        ^^^^^^^^^

